<resources>
    <string name="app_name">Notes</string>

    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="body">Body</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="find">Find:</string>
    <string name="sort">Sort by:</string>
    <string name="bodyNotFilledError">Body should be dilled.</string>
</resources>
