<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.NoteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:background="@color/cofee"
                android:textSize="18dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEdit"
                android:background="@color/milk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:background="@color/cofee"
                android:textSize="18dp"/>


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tagsEdit"
                android:background="@color/milk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:background="@color/cofee"
                android:textSize="18dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bodyEdit"
                android:background="@color/milk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|start" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/save"
                android:layout_gravity="bottom"
                android:onClick="save"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"
                android:background="@color/colorAccent"
                android:layout_gravity="bottom"
                android:onClick="delete"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>